--- a/SpringProject/src/main/resources/application.properties
+++ b/SpringProject/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=root
 
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
