--- a/SpringProject/pom.xml
+++ b/SpringProject/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cov</groupId>
-	<artifactId>SpringProject</artifactId>
+	<artifactId>SpringBootReST-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringProject</name>
+	<name>SpringBootReST-1</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -31,6 +31,12 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 
 
