--- a/SpringProject/src/main/resources/application.properties
+++ b/SpringProject/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
